--- a/Random Quiz Generator/index1.html
+++ b/Random Quiz Generator/index1.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quiz Game</title>
-    <link rel="stylesheet" href="Style1.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <div class="container">
         <h1>Welcome to the Computer Science Quiz Game!</h1>
         <p>Test your knowledge with exciting Computer Science questions.</p>
-        <button class="start-btn"><a id="anchor" href="./index.html">Let's Start</a></button>
+        <button class="start-btn"><a id="anchor" href="./index2.html">Let's Start</a></button>
     </div>
 </body>
 </html>
