--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -11,17 +11,18 @@
   <div class="container">
     <h1 class="title">Tic Tac Toe</h1>
     <div class="board">
-      <div class="cell" id="0" data-cell></div>
-      <div class="cell" id="1" data-cell></div>
-      <div class="cell" id="2" data-cell></div>
-      <div class="cell" id="3" data-cell></div>
-      <div class="cell" id="4" data-cell></div>
-      <div class="cell" id="5" data-cell></div>
-      <div class="cell" id="6" data-cell></div>
-      <div class="cell" id="7" data-cell></div>
-      <div class="cell" id="8" data-cell></div>
+      <div class="cell" id="0"></div>
+      <div class="cell" id="1"></div>
+      <div class="cell" id="2"></div>
+      <div class="cell" id="3"></div>
+      <div class="cell" id="4"></div>
+      <div class="cell" id="5"></div>
+      <div class="cell" id="6"></div>
+      <div class="cell" id="7"></div>
+      <div class="cell" id="8"></div>
     </div>
     <button id="restartButton">Restart</button>
+    <h2 id="text">Player 1's Move</h2>
   </div>
   <script src="./script.js"></script>
 </body>
